# kliversala-bot

./: .gitignore  Cargo.toml  README.md  _mock_response  mock_response.html  package-lock.json  package.json  serverless.yaml
.github/workflows/: build-test-release.yml  test.yml
src/: db.rs  dynamo_db.rs  lib.rs  main.rs  posts.rs  telegram.rs
src/sources/: facebook.rs  mod.rs
src/telegram/: client.rs
tests/: tests.rs
