[package]
name = "kliversala-bot"
version = "0.1.0"
authors = ["Aldis Ameriks <aldis.ameriks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
scraper = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.21.0"
log = "0.4.8"
env_logger = "0.7.1"
