[package]
name = "kliversala-bot"
version = "0.1.0"
authors = ["Aldis Ameriks <aldis.ameriks@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
scraper = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
log = "0.4.8"
simple_logger = "1.5.0"
html2md = "0.2.9"
lambda_runtime = "0.2.1"
rusoto_core = "0.42.0"
rusoto_dynamodb = "0.42.0"
tokio = { version = "0.2" }

[dev-dependencies]
mockito = "0.23.0"
tokio = { version = "0.2", features = ["macros"] }
